--- a/src/index.njk
+++ b/src/index.njk
@@ -31,32 +31,29 @@ title: Portfolio - Walter Moore
 <!-- Timeline Section -->
 <section id="timeline" class="py-16 bg-gray-50">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">My Journey</h3>
+    <h3 class="text-3xl font-bold text-center">Employment History</h3>
     <div class="mt-10 relative border-l-2 border-blue-500">
       {% for company in companies %}
-      <!-- <div class="mb-8 ml-6">
-        <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
-        <h4 class="text-xl font-semibold">{{company.title}}</h4>
-        <p class="text-gray-600">{{company.subtitle}}</p>
-        <p class="mt-2 text-gray-700">{{company.description}}</p>
-        <span class="text-sm text-gray-500">{{company.date}}</span>
-      </div> -->
       <div class="mb-8 ml-6 flex items-center">
+      
         <!-- Timeline Marker -->
         <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
-        
-        <!-- Company Content -->
-        <div class="flex-1">
-          <h4 class="text-xl font-semibold">{{ company.title }}</h4>
-          <p class="text-gray-600">{{ company.subtitle }}</p>
-          <p class="mt-2 text-gray-700">{{ company.description }}</p>
-          <span class="text-sm text-gray-500">{{ company.date }}</span>
+        <a href="/companies/{{company['slug']}}/" >
+          <div class="flex flex-row items-stretch rounded-lg shadow-lg border border-gray-200">
+          <!-- Company Content -->
+          <div class="grow shrink flex-col p-4">
+            <h4 class="text-xl font-semibold">{{ company.title }}</h4>
+            <p class="text-gray-600">{{ company.subtitle }}</p>
+            <p class="mt-2 text-gray-700">{{ company.description }}</p>
+            <span class="text-sm text-gray-500">{{ company.date }}</span>
+          </div>
+          
+          <!-- Company Image -->
+          <div class="flex flex-col justify-center bg-white w-48 flex-none p-8">
+            <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
+          </div>
         </div>
-        
-        <!-- Company Image -->
-        <div class="ml-4 p-2 w-48 h-32 rounded-lg shadow-lg border border-gray-200 overflow-hidden">
-          <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain w-full h-full">
-        </div>
+        </a>
       </div>
       {% endfor %}
     </div>
@@ -66,26 +63,24 @@ title: Portfolio - Walter Moore
 <!-- Portfolio Section -->
 <section id="projects" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Portfolio</h3>
+    <h3 class="text-3xl font-bold text-center">Project Portfolio</h3>
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {% for project in portfolio %}
       
-      <div class="bg-white flex flex-col rounded-xl border border-2">
-        <a href="/projects/{{project['project-slug']}}/">
+      <div class="bg-white flex flex-col rounded-xl border border-2 h-full">
+        <a href="/projects/{{project['project-slug']}}/" class="flex flex-col h-full">
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class="w-full h-64 object-cover object-top rounded-t-xl">
-          <div class="grow flex flex-col justify-between p-6">
-          
-          <div clas="flex flex-col">
-            
-            <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
-            <p class="mt-2 text-gray-700">{{project.description}}</p>
+          <div class="grow shrink flex flex-col justify-between p-6">
+            <div>
+              <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
+              <p class="line-clamp-4 mt-2 text-gray-700">{{project.description}}</p>
+            </div>
+            <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
+              {% for skill in project.skills %}
+              <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
+              {% endfor %}
+            </div>
           </div>
-          <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
-            {% for skill in project.skills%}
-            <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
-            {% endfor %}
-          </div>
-        </div>
         </a>
       </div>
       {% endfor %}
