--- a/src/project.njk
+++ b/src/project.njk
@@ -11,17 +11,20 @@ pagination:
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center mb-8">{{ project.title }}</h3>
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+    <div class="flex flex-row flex-wrap items-stretch gap-8">
       <!-- Image Section -->
-      <div class="relative col-span-1">
+      <div class="grow shrink relative">
         <!-- Project Image -->
-        <div class="h-64 w-full bg-contain bg-center rounded-xl border border-gray-200 shadow-lg" style="background-image: url('img/{{ project.image }}');"></div>
+        <div 
+          class="h-full w-full bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" 
+          style="background-image: url('img/{{ project.image }}');">
+        </div>
         <!-- PFP Image -->
-        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="absolute left-2 top-2 w-24 h-24 rounded-full border-4 border-white shadow-lg">
+        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="absolute left-0 top-0 w-24 h-24 rounded-tl-xl rounded-br-xl border-2 border-white shadow-lg">
       </div>
-
+    
       <!-- Details Section -->
-      <div class="col-span-2">
+      <div class="grow shrink border-2 rounded-xl p-4">
         <!-- Skills -->
         <div class="mb-6">
           <h4 class="text-xl font-semibold mb-2">Skills</h4>
@@ -31,7 +34,7 @@ pagination:
             {% endfor %}
           </div>
         </div>
-
+    
         <!-- Languages -->
         <div class="mb-6">
           <h4 class="text-xl font-semibold mb-2">Languages</h4>
@@ -41,7 +44,7 @@ pagination:
             {% endfor %}
           </div>
         </div>
-
+    
         <!-- Platforms -->
         <div class="mb-6">
           <h4 class="text-xl font-semibold mb-2">Platforms</h4>
@@ -51,7 +54,7 @@ pagination:
             {% endfor %}
           </div>
         </div>
-
+    
         <!-- Links -->
         <div>
           <h4 class="text-xl font-semibold mb-2">Links</h4>
@@ -65,6 +68,7 @@ pagination:
         </div>
       </div>
     </div>
+    
   </div>
 </section>
 
