--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,7 +11,9 @@
     <!-- Header -->
     <header class="bg-white shadow sticky top-0 z-50">
       <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+        <a href="/">
         <h1 class="text-2xl"><span class="font-bold">WALTER </span>MOORE</h1>
+        </a>
         <nav>
           <ul class="flex space-x-6">
             <li><a href="#about" class="text-gray-700 hover:text-blue-500">About</a></li>
