--- a/src/company.njk
+++ b/src/company.njk
@@ -11,35 +11,55 @@ pagination:
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center mb-8">{{ company.title }}</h3>
-    <div class="flex flex-row flex-wrap items-stretch gap-8">
+    <h4 class="text-2xl text-center mb-8">{{ company.subtitle }}</h4>
+    <div class="flex flex-row items-stretch gap-8">
       <!-- Image Section -->
-      <div class="grow shrink relative">
+      <div class="relative w-full lg:w-96 min-h-96 rounded-xl border border-gray-200 shadow-lg">
         <!-- Project Image -->
-        <div 
-          class="h-full w-full bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" 
-          style="background-image: url('img/{{ company.image }}');">
+         <div class="h-full w-full flex flex-col justify-center" >
+          <img 
+            class="w-96 p-8"
+            src="/img/{{ company.image }}">
+          </img>
         </div>
         <!-- PFP Image -->
         <img src="/img/pfp.jpg" alt="{{ company.title }}" class="absolute left-0 top-0 w-24 h-24 rounded-tl-xl rounded-br-xl border-2 border-white shadow-lg">
       </div>
       <!-- Details Section -->
-      <div class="grow shrink border-2 rounded-xl p-4">
+      <div class="border-2 rounded-xl p-4">
         <h4 class="text-xl font-semibold">{{ company.title }}</h4>
         <p class="text-gray-600">{{ company.subtitle }}</p>
         <p class="mt-2 text-gray-700">{{ company.description }}</p>
         <span class="text-sm text-gray-500">{{ company.date }}</span>
       </div>
     </div>
-    
   </div>
 </section>
 
-
-
-<section id="about" class="py-16">
+<!-- Portfolio Section -->
+<section id="projects" class="py-16">
   <div class="container mx-auto px-6">
-    <div class="prose mx-auto">
-      {{ project.details | safe }}
+    <h3 class="text-3xl font-bold text-center">Project Portfolio</h3>
+    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+      {% for project in portfolio | filterByCompany(company.slug) %}
+      
+      <div class="bg-white flex flex-col rounded-xl border border-2 h-full">
+        <a href="/projects/{{project['project-slug']}}/" class="flex flex-col h-full">
+          <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class="w-full h-64 object-cover object-top rounded-t-xl">
+          <div class="grow shrink flex flex-col justify-between p-6">
+            <div>
+              <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
+              <p class="line-clamp-4 mt-2 text-gray-700">{{project.description}}</p>
+            </div>
+            <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
+              {% for skill in project.skills %}
+              <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
+              {% endfor %}
+            </div>
+          </div>
+        </a>
+      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
