--- a/src/project.njk
+++ b/src/project.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.njk
-title: Portfolio - Walter Moore
+title: Project - Walter Moore
 permalink: "/projects/{{ project['project-slug'] }}/"
 pagination:
   data: collections.projects
@@ -10,13 +10,13 @@ pagination:
 
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center mb-8">{{ project.title }}</h3>
+    <h3 class="text-3xl font-bold text-center mb-8">Project: {{ project.title }}</h3>
     <div class="flex flex-row flex-wrap items-stretch gap-8">
       <!-- Image Section -->
-      <div class="grow shrink relative">
+      <div class="relative w-full lg:w-96 min-h-96">
         <!-- Project Image -->
         <div 
-          class="h-full w-full bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" 
+          class="h-full bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" 
           style="background-image: url('img/{{ project.image }}');">
         </div>
         <!-- PFP Image -->
@@ -49,8 +49,8 @@ pagination:
         <div class="mb-6">
           <h4 class="text-xl font-semibold mb-2">Platforms</h4>
           <div class="flex flex-wrap gap-2">
-            {% for platform in project.platforms %}
-            <span class="inline-block px-3 py-1 text-sm bg-yellow-100 text-yellow-700 rounded-full">{{ platform }}</span>
+            {% for tool in project.tools %}
+            <span class="inline-block px-3 py-1 text-sm bg-yellow-100 text-yellow-700 rounded-full">{{ tool }}</span>
             {% endfor %}
           </div>
         </div>
@@ -72,9 +72,7 @@ pagination:
   </div>
 </section>
 
-
-
-<section id="about" class="py-16">
+<section id="about" class="mb-16">
   <div class="container mx-auto px-6">
     <div class="prose mx-auto">
       {{ project.details | safe }}
