--- a/src/index.njk
+++ b/src/index.njk
@@ -34,22 +34,28 @@ title: Portfolio - Walter Moore
     <h3 class="text-3xl font-bold text-center">Employment History</h3>
     <div class="mt-10 relative border-l-2 border-blue-500">
       {% for company in companies %}
-      <div class="mb-8 ml-6 flex items-center">
+      <div class="mb-8 mx-6 flex items-center">
       
         <!-- Timeline Marker -->
         <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
-        <a href="/companies/{{company['slug']}}/" >
+        <a class="w-full" href="/companies/{{company['slug']}}/" >
           <div class="flex flex-row items-stretch rounded-lg shadow-lg border border-gray-200">
           <!-- Company Content -->
           <div class="grow shrink flex-col p-4">
-            <h4 class="text-xl font-semibold">{{ company.title }}</h4>
-            <p class="text-gray-600">{{ company.subtitle }}</p>
+            <div class="flex flex-row justify-between gap-4">
+              <div class="flex flex-col">
+                <h4 class="text-xl font-semibold">{{ company.title }}</h4>
+                <p class="text-gray-600">{{ company.subtitle }}</p>
+                <span class="text-sm text-gray-500">{{ company.date }}</span>
+              </div>
+              <div class="flex md:hidden flex-col justify-center bg-white max-h-24 max-w-32 rounded-lg flex-none p-2">
+                <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
+              </div>
+            </div>
             <p class="mt-2 text-gray-700">{{ company.description }}</p>
-            <span class="text-sm text-gray-500">{{ company.date }}</span>
           </div>
-          
           <!-- Company Image -->
-          <div class="flex flex-col justify-center bg-white w-48 flex-none p-8">
+          <div class="hidden md:flex flex-col justify-center bg-white w-48 flex-none p-8">
             <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
           </div>
         </div>
