--- a/src/project.njk
+++ b/src/project.njk
@@ -8,25 +8,27 @@ pagination:
   alias: project
 ---
 
+{% set company = project['company-slug'] | findCompany(companies) %}
 <section id="about" class="py-16">
-  <div class="container mx-auto px-6">
+  <div class="container mx-auto px-6 flex flex-col gap-8">
+    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+      <!-- PFP Image -->
+      <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-24 h-24 rounded-full border-2 border-gray-200 shadow-lg">
+      <h1 class="text-3xl">+</h1>
+      <!-- Company Image -->
+      <img src="/img/{{company.image}}" alt="{{ company.title }}" class="h-24 rounded-xl border-2 p-4 border-gray-200 shadow-lg">
+    </div>
     <h3 class="text-3xl font-bold text-center mb-8">Project: {{ project.title }}</h3>
-    <div class="flex flex-row flex-wrap items-stretch gap-8">
-      <!-- Image Section -->
-      <div class="relative w-full lg:w-96 min-h-96">
-        <!-- Project Image -->
-        <div 
-          class="h-full bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" 
-          style="background-image: url('img/{{ project.image }}');">
-        </div>
-        <!-- PFP Image -->
-        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="absolute left-0 top-0 w-24 h-24 rounded-tl-xl rounded-br-xl border-2 border-white shadow-lg">
+    <div class="flex flex-col lg:flex-row items-stretch gap-8">
+      <!-- Project Section -->
+      <div class="grow shrink basis-1 min-h-96 bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" style="background-image: url('img/{{ project.image }}');">  
       </div>
-    
       <!-- Details Section -->
-      <div class="grow shrink border-2 rounded-xl p-4">
+      <div class="grow shrink basis-1 items-stretch border-2 rounded-xl p-4">
+
+        {% if project.skills and project.skills.length > 0 %}
         <!-- Skills -->
-        <div class="mb-6">
+        <div class="w-full mb-6">
           <h4 class="text-xl font-semibold mb-2">Skills</h4>
           <div class="flex flex-wrap gap-2">
             {% for skill in project.skills %}
@@ -34,9 +36,11 @@ pagination:
             {% endfor %}
           </div>
         </div>
-    
+        {% endif %}
+        
+        {% if project.languages and project.languages.length > 0 %}
         <!-- Languages -->
-        <div class="mb-6">
+        <div class="w-full mb-6">
           <h4 class="text-xl font-semibold mb-2">Languages</h4>
           <div class="flex flex-wrap gap-2">
             {% for language in project.languages %}
@@ -44,19 +48,23 @@ pagination:
             {% endfor %}
           </div>
         </div>
+        {% endif %}
     
-        <!-- Platforms -->
-        <div class="mb-6">
-          <h4 class="text-xl font-semibold mb-2">Platforms</h4>
+        {% if project.tools and project.tools.length > 0 %}
+        <!-- Tools -->
+        <div class="w-full mb-6">
+          <h4 class="text-xl font-semibold mb-2">Tools</h4>
           <div class="flex flex-wrap gap-2">
             {% for tool in project.tools %}
             <span class="inline-block px-3 py-1 text-sm bg-yellow-100 text-yellow-700 rounded-full">{{ tool }}</span>
             {% endfor %}
           </div>
         </div>
+        {% endif %}
     
+        {% if project.urls and project.urls.length > 0 %}
         <!-- Links -->
-        <div>
+        <div class="w-full mb-6">
           <h4 class="text-xl font-semibold mb-2">Links</h4>
           <ul class="list-none space-y-2">
             {% for url in project.urls %}
@@ -66,6 +74,8 @@ pagination:
             {% endfor %}
           </ul>
         </div>
+        {% endif %}
+
       </div>
     </div>
     
