--- a/src/index.njk
+++ b/src/index.njk
@@ -15,12 +15,12 @@ title: Portfolio - Walter Moore
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center">About Me</h3>
-    <div class="mt-10 grid gap-8 grid-cols-1 lg:grid-cols-3">
-      <div class="col-span-1">
+    <div class="mt-10 flex flex-col lg:flex-row gap-8 w-full">
+      <div class="grow basis-1 flex flex-row justify-center items-center lg:justify-start">
         <img src="img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
       </div>
-      <div class="col-span-2">
-        <p class="mt-4 text-lg text-gray-700">
+      <div class="grow basis-1">
+        <p class="mt-4 text-lg text-justify text-gray-700">
           {{about.introduction}}
         </p>
       </div>
@@ -31,7 +31,7 @@ title: Portfolio - Walter Moore
 <!-- Timeline Section -->
 <section id="timeline" class="py-16 bg-gray-50">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Employment History</h3>
+    <h3 class="text-3xl font-bold text-center">Work History</h3>
     <div class="mt-10 relative border-l-2 border-blue-500">
       {% for company in companies %}
       <div class="mb-8 mx-6 flex items-center">
@@ -52,7 +52,7 @@ title: Portfolio - Walter Moore
                 <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
               </div>
             </div>
-            <p class="mt-2 text-gray-700">{{ company.description }}</p>
+            <p class="mt-2 text-gray-700 text-justify">{{ company.description }}</p>
           </div>
           <!-- Company Image -->
           <div class="hidden md:flex flex-col justify-center bg-white w-48 flex-none p-8">
@@ -79,7 +79,7 @@ title: Portfolio - Walter Moore
           <div class="grow shrink flex flex-col justify-between p-6">
             <div>
               <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
-              <p class="line-clamp-4 mt-2 text-gray-700">{{project.description}}</p>
+              <p class="line-clamp-4 mt-2 text-gray-700 text-justify">{{project.description}}</p>
             </div>
             <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
               {% for skill in project.skills %}
