--- a/src/company.njk
+++ b/src/company.njk
@@ -10,28 +10,26 @@ pagination:
 
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center mb-8">{{ company.title }}</h3>
-    <h4 class="text-2xl text-center mb-8">{{ company.subtitle }}</h4>
-    <div class="flex flex-row items-stretch gap-8">
-      <!-- Image Section -->
-      <div class="relative w-full lg:w-96 min-h-96 rounded-xl border border-gray-200 shadow-lg">
-        <!-- Project Image -->
-         <div class="h-full w-full flex flex-col justify-center" >
-          <img 
-            class="w-96 p-8"
-            src="/img/{{ company.image }}">
-          </img>
-        </div>
-        <!-- PFP Image -->
-        <img src="/img/pfp.jpg" alt="{{ company.title }}" class="absolute left-0 top-0 w-24 h-24 rounded-tl-xl rounded-br-xl border-2 border-white shadow-lg">
-      </div>
+    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+      <img 
+        class="w-96 p-8"
+        src="/img/{{ company.image }}">
+      </img>
+      
+    </div>
+    <h3 class="text-3xl font-bold text-center mb-4">{{ company.subtitle }}</h3>
+    <h4 class="text-2xl text-center mb-8">{{ company.date }}</h4>
+    <div class="flex flex-row items-stretch gap-8 rounded-xl border border-gray-200 shadow-lg p-4">
       <!-- Details Section -->
-      <div class="border-2 rounded-xl p-4">
-        <h4 class="text-xl font-semibold">{{ company.title }}</h4>
-        <p class="text-gray-600">{{ company.subtitle }}</p>
+      <div class="grow">
+        <h4 class="text-2xl font-semibold">{{ company.title }}</h4>
         <p class="mt-2 text-gray-700">{{ company.description }}</p>
-        <span class="text-sm text-gray-500">{{ company.date }}</span>
       </div>
+      <!-- Image Section -->
+      <div class="flex flex-col" >
+        <!-- PFP Image -->
+        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-64 aspect-square rounded-xl border-2 border-gray-200 shadow-lg"> 
+     </div>
     </div>
   </div>
 </section>
@@ -39,7 +37,7 @@ pagination:
 <!-- Portfolio Section -->
 <section id="projects" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Project Portfolio</h3>
+    <h3 class="text-3xl font-bold text-center">Sample Projects</h3>
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {% for project in portfolio | filterByCompany(company.slug) %}
       
