--- a/src/project.njk
+++ b/src/project.njk
@@ -16,7 +16,9 @@ pagination:
       <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-24 h-24 rounded-full border-2 border-gray-200 shadow-lg">
       <h1 class="text-3xl">+</h1>
       <!-- Company Image -->
+      <a href="/companies/{{project['company-slug']}}/">
       <img src="/img/{{company.image}}" alt="{{ company.title }}" class="h-24 rounded-xl border-2 p-4 border-gray-200 shadow-lg">
+      </a>
     </div>
     <h3 class="text-3xl font-bold text-center mb-8">Project: {{ project.title }}</h3>
     <div class="flex flex-col lg:flex-row items-stretch gap-8">
