header link temp fixes

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -32,10 +32,10 @@
           class="hidden lg:block absolute top-full left-0 lg:static lg:flex w-full lg:w-auto bg-white lg:bg-transparent shadow-md lg:shadow-none"
         >
           <ul class="flex flex-col lg:flex-row lg:space-x-6">
-            <li><a href="#about" class="block px-6 py-2 text-gray-700 hover:text-blue-500">About</a></li>
-            <li><a href="#experience" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Experience</a></li>
-            <li><a href="#projects" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Projects</a></li>
-            <li><a href="#contact" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Contact</a></li>
+            <li><a href="/#about" class="block px-6 py-2 text-gray-700 hover:text-blue-500">About</a></li>
+            <li><a href="/#experience" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Experience</a></li>
+            <li><a href="/#projects" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Projects</a></li>
+            <li><a href="/#contact" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Contact</a></li>
           </ul>
         </nav>
       </div>
