--- a/src/company.njk
+++ b/src/company.njk
@@ -13,9 +13,7 @@ pagination:
     <div class="flex flex-col md:flex-row justify-center items-center gap-8">
       <img 
         class="w-96 p-8"
-        src="/img/{{ company.image }}">
-      </img>
-      
+        src="/img/{{ company.image }}"/>
     </div>
     <h3 class="text-3xl font-bold text-center mb-4">{{ company.subtitle }}</h3>
     <h4 class="text-2xl text-center mb-8">{{ company.date }}</h4>
