--- a/src/portfolio.njk
+++ b/src/portfolio.njk
@@ -26,7 +26,7 @@ title: Portfolio - Walter Moore
       
       <div class="bg-white flex flex-col rounded-xl border border-2 h-full">
         <a href="/projects/{{project['project-slug']}}/" class="flex flex-col">
-          <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class=" w-full aspect-video object-cover object-top rounded-t-xl">
+          <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class=" w-full aspect-square object-cover rounded-t-xl">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div>
               <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
