--- a/src/project.njk
+++ b/src/project.njk
@@ -23,7 +23,7 @@ pagination:
     <h3 class="text-3xl font-bold text-center mb-8">Project: {{ project.title }}</h3>
     <div class="flex flex-col lg:flex-row items-stretch gap-8">
       <!-- Project Section -->
-      <div class="grow shrink basis-1 min-h-96 bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" style="background-image: url('img/{{ project.image }}');">  
+      <div class="grow shrink basis-1 aspect-square bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" style="background-image: url('img/{{ project.image }}');">  
       </div>
       <!-- Details Section -->
       <div class="grow shrink basis-1 items-stretch border-2 rounded-xl p-4">
