--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="It’s (j)ust (e)leventy and (t)ailwind … OK, and a few other things; it’s still really small though.">
+    <meta name="description" content="The portfolio site for Walter Moore.">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
@@ -20,9 +20,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/img/site.webmanifest">
   </head>
-  <body>
+  <body class="text-minimal-black dark:text-minimal-white bg-minimal-white dark:bg-minimal-black">
     <!-- Header -->
-    <header class="bg-white shadow sticky top-0 z-50">
+    <header class=" bg-minimal-white dark:bg-minimal-black shadow sticky top-0 z-50">
       <div class="container mx-auto px-6 py-4 flex justify-between items-center">
         <a href="/">
           <img src="/img/waltermoore.png" alt="{{ project.title }}" class="w-64"/>
@@ -30,11 +30,11 @@
         <!-- Hamburger Icon -->
         <button 
           id="menu-toggle" 
-          class="lg:hidden block text-gray-700 focus:outline-none"
+          class="lg:hidden block focus:outline-none"
           aria-label="Toggle navigation"
         >
           <!-- Icon (Hamburger) -->
-          <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" fill="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
@@ -42,13 +42,13 @@
         <!-- Navigation -->
         <nav 
           id="nav-menu" 
-          class="hidden lg:block absolute top-full left-0 lg:static lg:flex w-full lg:w-auto bg-white lg:bg-transparent shadow-md lg:shadow-none"
+          class="hidden lg:block absolute top-full left-0 lg:static lg:flex w-full lg:w-auto bg-minimal-white dark:bg-minimal-black lg:bg-transparent border-t-2 lg:border-t-0 shadow-md lg:shadow-none"
         >
-          <ul class="flex flex-col lg:flex-row lg:space-x-6">
-            <li><a href="/" class="block px-6 py-2 text-gray-700 hover:text-blue-500">About</a></li>
-            <li><a href="/experience" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Experience</a></li>
-            <li><a href="/portfolio" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Portfolio</a></li>
-            <li><a href="/contact" class="block px-6 py-2 text-gray-700 hover:text-blue-500">Contact</a></li>
+          <ul class="w-[250px] mx-auto my-8 lg:my-0 lg:w-auto lg:mx-0 flex flex-col lg:flex-row items-center lg:space-x-6">
+            <li><a href="/" class="nav-link block px-6 py-2 hover:text-minimal-primary">About</a></li>
+            <li><a href="/experience" class="nav-link block px-6 py-2 hover:text-minimal-primary">Experience</a></li>
+            <li><a href="/portfolio" class="nav-link block px-6 py-2 hover:text-minimal-primary">Portfolio</a></li>
+            <li><a href="/contact" class="nav-link block px-6 py-2 hover:text-minimal-primary">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -57,7 +57,7 @@
       {{ content | safe }}
     </main>
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-4">
+    <footer class="py-4">
       <div class="container mx-auto px-6 text-center">
         <p>&copy; 2024 Walter Moore. All Rights Reserved.</p>
       </div>
@@ -70,6 +70,22 @@
       menuToggle.addEventListener('click', () => {
         navMenu.classList.toggle('hidden');
         navMenu.classList.toggle('block');
+      });
+
+      document.addEventListener("DOMContentLoaded", function () {
+        // Get current path
+        const currentPath = window.location.pathname;
+
+        // Select all nav links
+        const navLinks = document.querySelectorAll(".nav-link");
+
+        // Loop through each link and check if it matches the current path
+        navLinks.forEach(link => {
+          console.log(`currentPath=${currentPath}, href=${link.getAttribute("href")}`)
+          if ( currentPath.slice(0,-1) === link.getAttribute("href") ) {
+            link.classList.add("text-minimal-primary");
+          }
+        });
       });
     </script>
   </body>
