--- a/src/company.njk
+++ b/src/company.njk
@@ -10,23 +10,23 @@ pagination:
 
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
-    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+    <h3 class="text-3xl font-bold text-center mb-8">{{ company.subtitle }}</h3>
+    <div class="flex flex-col md:flex-row justify-center items-center mb-32">
       <img 
-        class="w-96 p-8"
+        class="bg-minimal-white w-96 p-8 rounded-xl"
         src="/img/{{ company.image }}"/>
     </div>
-    <h3 class="text-3xl font-bold text-center mb-4">{{ company.subtitle }}</h3>
-    <h4 class="text-2xl text-center mb-8">{{ company.date }}</h4>
-    <div class="flex flex-row items-stretch gap-8 rounded-xl border border-gray-200 shadow-lg p-4">
+    <div class="flex flex-row items-stretch gap-8 rounded-xl border border-gray-200 shadow-lg">
       <!-- Details Section -->
-      <div class="grow">
+      <div class="grow p-4">
         <h4 class="text-2xl font-semibold">{{ company.title }}</h4>
-        <p class="mt-2 text-gray-700">{{ company.description }}</p>
+        <h4 class="text-2xl">{{ company.date }}</h4>
+        <p class="mt-2">{{ company.description }}</p>
       </div>
       <!-- Image Section -->
       <div class="flex flex-col" >
         <!-- PFP Image -->
-        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-64 aspect-square rounded-xl border-2 border-gray-200 shadow-lg"> 
+        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="aspect-square rounded-r-xl border-2 border-gray-200 shadow-lg"> 
      </div>
     </div>
   </div>
@@ -39,17 +39,17 @@ pagination:
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {% for project in portfolio | filterByCompany(company.slug) %}
       
-      <div class="bg-white flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border border-2 h-full">
         <a href="/projects/{{project['project-slug']}}/" class="flex flex-col h-full">
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class="w-full h-64 object-cover object-top rounded-t-xl">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div>
               <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
-              <p class="line-clamp-4 mt-2 text-gray-700">{{project.description}}</p>
+              <p class="line-clamp-4 mt-2">{{project.description}}</p>
             </div>
             <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
               {% for skill in project.skills %}
-              <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
+              <span class="px-3 py-1 text-sm bg-minimal-blue text-minimal-blueDark rounded-full">{{skill}}</span>
               {% endfor %}
             </div>
           </div>
