--- a/src/experience.njk
+++ b/src/experience.njk
@@ -11,7 +11,7 @@ title: Portfolio - Walter Moore
       <img src="/img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
     </div>
     <div class="mt-10 flex flex-col lg:flex-row gap-8 w-full">
-      <p class="mt-4 text-lg text-justify text-gray-700">
+      <p class="mt-4 text-lg text-justify">
           {{about['experience-intro']}}
       </p>
     </div>
@@ -19,14 +19,14 @@ title: Portfolio - Walter Moore
 </section>
 
 <!-- Timeline Section -->
-<section id="timeline" class="py-16 bg-gray-50">
+<section id="timeline" class="py-16">
   <div class="container mx-auto px-6">
     <div class="mt-10 relative border-l-2 border-blue-500">
       {% for company in companies %}
       <div class="mb-8 mx-6 flex items-center">
       
         <!-- Timeline Marker -->
-        <div class="absolute w-4 h-4 bg-blue-500 rounded-full -left-2.5 border border-white"></div>
+        <div class="absolute w-4 h-4 bg-minimal-secondary rounded-full -left-2.5 border border-white"></div>
         <a class="w-full" href="/companies/{{company['slug']}}/" >
           <div class="flex flex-row items-stretch rounded-lg shadow-lg border border-gray-200">
           <!-- Company Content -->
@@ -34,17 +34,17 @@ title: Portfolio - Walter Moore
             <div class="flex flex-row justify-between gap-4">
               <div class="flex flex-col">
                 <h4 class="text-xl font-semibold">{{ company.title }}</h4>
-                <p class="text-gray-600">{{ company.subtitle }}</p>
-                <span class="text-sm text-gray-500">{{ company.date }}</span>
+                <p class="">{{ company.subtitle }}</p>
+                <span class="text-sm">{{ company.date }}</span>
               </div>
-              <div class="flex md:hidden flex-col justify-center bg-white max-h-24 max-w-32 rounded-lg flex-none p-2">
+              <div class="flex md:hidden flex-col justify-center w-32 rounded-lg bg-white flex-none p-2">
                 <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
               </div>
             </div>
-            <p class="mt-2 text-gray-700 text-justify">{{ company.description }}</p>
+            <p class="mt-2 text-justify">{{ company.description }}</p>
           </div>
           <!-- Company Image -->
-          <div class="hidden md:flex flex-col justify-center bg-white w-48 flex-none p-8">
+          <div class="hidden md:flex flex-col justify-center w-48 bg-white flex-none p-8">
             <img src="/img/{{ company.image }}" alt="{{ company.title }}" class="object-contain">
           </div>
         </div>
