--- a/src/portfolio.njk
+++ b/src/portfolio.njk
@@ -11,7 +11,7 @@ title: Portfolio - Walter Moore
     <img src="/img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
     </div>
     <div class="mt-10 flex flex-col lg:flex-row gap-8 w-full">
-      <p class="mt-4 text-lg text-justify text-gray-700">
+      <p class="mt-4 text-lg text-justify">
           {{about['portfolio-intro']}}
       </p>
     </div>
@@ -24,17 +24,17 @@ title: Portfolio - Walter Moore
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {% for project in portfolio %}
       
-      <div class="bg-white flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border border-2 h-full">
         <a href="/projects/{{project['project-slug']}}/" class="flex flex-col">
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class=" w-full aspect-square object-cover rounded-t-xl">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div>
               <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
-              <p class="line-clamp-4 mt-2 text-gray-700 text-justify">{{project.description}}</p>
+              <p class="line-clamp-4 mt-2 text-justify">{{project.description}}</p>
             </div>
             <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
               {% for skill in project.skills %}
-              <span class="px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{skill}}</span>
+              <span class="px-3 py-1 text-sm bg-minimal-blue text-bg-minimal-blueDark rounded-full">{{skill}}</span>
               {% endfor %}
             </div>
           </div>
