--- a/src/project.njk
+++ b/src/project.njk
@@ -11,16 +11,17 @@ pagination:
 {% set company = project['company-slug'] | findCompany(companies) %}
 <section id="about" class="py-16">
   <div class="container mx-auto px-6 flex flex-col gap-8">
-    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+    <h3 class="text-3xl font-bold text-center mb-8">{{ project.title }}</h3>
+    <div class="flex flex-col md:flex-row justify-center items-center gap-8 mb-32">
       <!-- PFP Image -->
       <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-24 h-24 rounded-full border-2 border-gray-200 shadow-lg">
       <h1 class="text-3xl">+</h1>
       <!-- Company Image -->
       <a href="/companies/{{project['company-slug']}}/">
-      <img src="/img/{{company.image}}" alt="{{ company.title }}" class="h-24 rounded-xl border-2 p-4 border-gray-200 shadow-lg">
+      <img src="/img/{{company.image}}" alt="{{ company.title }}" class="h-24 rounded-xl border-2 p-4 bg-minimal-white border-gray-200 shadow-lg">
       </a>
     </div>
-    <h3 class="text-3xl font-bold text-center mb-8">Project: {{ project.title }}</h3>
+    
     <div class="flex flex-col lg:flex-row items-stretch gap-8">
       <!-- Project Section -->
       <div class="grow shrink basis-1 aspect-square bg-cover bg-center rounded-xl border border-gray-200 shadow-lg" style="background-image: url('img/{{ project.image }}');">  
@@ -34,7 +35,7 @@ pagination:
           <h4 class="text-xl font-semibold mb-2">Skills</h4>
           <div class="flex flex-wrap gap-2">
             {% for skill in project.skills %}
-            <span class="inline-block px-3 py-1 text-sm bg-blue-100 text-blue-700 rounded-full">{{ skill }}</span>
+            <span class="inline-block px-3 py-1 text-sm bg-minimal-blue text-minimal-blueDark rounded-full">{{ skill }}</span>
             {% endfor %}
           </div>
         </div>
@@ -46,7 +47,7 @@ pagination:
           <h4 class="text-xl font-semibold mb-2">Languages</h4>
           <div class="flex flex-wrap gap-2">
             {% for language in project.languages %}
-            <span class="inline-block px-3 py-1 text-sm bg-green-100 text-green-700 rounded-full">{{ language }}</span>
+            <span class="inline-block px-3 py-1 text-sm bg-minimal-green text-minimal-greenDark rounded-full">{{ language }}</span>
             {% endfor %}
           </div>
         </div>
@@ -58,7 +59,7 @@ pagination:
           <h4 class="text-xl font-semibold mb-2">Tools</h4>
           <div class="flex flex-wrap gap-2">
             {% for tool in project.tools %}
-            <span class="inline-block px-3 py-1 text-sm bg-yellow-100 text-yellow-700 rounded-full">{{ tool }}</span>
+            <span class="inline-block px-3 py-1 text-sm bg-minimal-yellow text-minimal-yellowDark rounded-full">{{ tool }}</span>
             {% endfor %}
           </div>
         </div>
@@ -71,7 +72,7 @@ pagination:
           <ul class="list-none space-y-2">
             {% for url in project.urls %}
             <li>
-              <a href="{{ url }}" target="_blank" class="text-blue-500 underline hover:text-blue-700">{{ url }}</a>
+              <a href="{{ url }}" target="_blank" class="text-minimal-primary underline hover:text-minimal-blue">{{ url }}</a>
             </li>
             {% endfor %}
           </ul>
@@ -86,7 +87,7 @@ pagination:
 
 <section id="about" class="mb-16">
   <div class="container mx-auto px-6">
-    <div class="prose mx-auto">
+    <div class="prose dark:prose-invert mx-auto">
       {{ project.details | safe }}
     </div>
   </div>
