--- a/src/portfolio.njk
+++ b/src/portfolio.njk
@@ -34,7 +34,7 @@ title: Portfolio - Walter Moore
             </div>
             <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
               {% for skill in project.skills %}
-              <span class="px-3 py-1 text-sm bg-minimal-blue text-bg-minimal-blueDark rounded-full">{{skill}}</span>
+              <span class="px-3 py-1 text-sm bg-minimal-blue text-minimal-blueDark rounded-full">{{skill}}</span>
               {% endfor %}
             </div>
           </div>
