--- a/src/company.njk
+++ b/src/company.njk
@@ -10,12 +10,13 @@ pagination:
 
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center mb-8">{{ company.subtitle }}</h3>
-    <div class="flex flex-col md:flex-row justify-center items-center mb-32">
+    <h3 class="text-3xl font-bold text-center mb-8">{{ company.name }}</h3>
+    <div class="flex flex-col md:flex-row justify-center items-center mb-8">
       <img 
         class="bg-minimal-white w-96 p-8 rounded-xl"
         src="/img/{{ company.image }}"/>
     </div>
+    <h3 class="text-3xl font-bold text-center mb-32">{{ company.location }}</h3>
     <div class="flex flex-row items-stretch gap-8 rounded-xl border border-gray-200 shadow-lg">
       <!-- Details Section -->
       <div class="grow p-4">
