--- a/src/experience.njk
+++ b/src/experience.njk
@@ -21,7 +21,7 @@ title: Portfolio - Walter Moore
 <!-- Timeline Section -->
 <section id="timeline" class="py-16">
   <div class="container mx-auto px-6">
-    <div class="mt-10 relative border-l-2 border-blue-500">
+    <div class="mt-10 relative border-l-2 border-minimal-primary">
       {% for company in companies %}
       <div class="mb-8 mx-6 flex items-center">
       
